--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,102 @@
 page-home {
 
+  .error_span{
+    color: red;
+  }
+
+  .emotion_display, .att_display, .msg_display{
+    font-size: 120%;
+  }
+  .att_display{
+    font-weight: bold;
+    font-size: 150%;
+  }
+  .msg_display{
+    font-size: 130%;
+    margin-top: 5%;
+  }
+
+  .info_modal_container{
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 999;
+  }
+  .info_modal{
+    display: block;
+    position: absolute;
+    top: 30%;
+    width: 80%;
+    left: 10%;
+    height: 40%;
+    background-color: white;
+    z-index: 999;
+  }
+
+.radio {
+  $color1: #f4f4f4;
+  $color2: #ffbf00;
+
+  margin: 0.5rem;
+  margin-top: 1em;
+  input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    + .radio-label {
+      &:before {
+        content: '';
+        background: $color1;
+        border-radius: 100%;
+        border: 1px solid darken($color1, 25%);
+        display: inline-block;
+        width: 1.4em;
+        height: 1.4em;
+        position: relative;
+        top: -0.2em;
+        margin-right: 0.5em;
+        margin-left: 2em;
+        vertical-align: top;
+        cursor: pointer;
+        text-align: center;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .radio-label {
+        &:before {
+          background-color: $color2;
+          box-shadow: inset 0 0 0 4px $color1;
+        }
+      }
+    }
+    &:focus {
+      + .radio-label {
+        &:before {
+          outline: none;
+          border-color: $color2;
+        }
+      }
+    }
+    &:disabled {
+      + .radio-label {
+        &:before {
+          box-shadow: inset 0 0 0 4px $color1;
+          border-color: darken($color1, 25%);
+          background: darken($color1, 25%);
+        }
+      }
+    }
+    + .radio-label {
+      &:empty {
+        &:before {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
 }
