--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -37,12 +37,13 @@ page-home {
     z-index: 999;
   }
 
+
 .radio {
   $color1: #f4f4f4;
   $color2: #ffbf00;
-
-  margin: 0.5rem;
+  margin: 0.3rem;
   margin-top: 1em;
+  margin-left: 1.4em;
   input[type="radio"] {
     position: absolute;
     opacity: 0;
@@ -58,7 +59,7 @@ page-home {
         position: relative;
         top: -0.2em;
         margin-right: 0.5em;
-        margin-left: 2em;
+        margin-left: 1em;
         vertical-align: top;
         cursor: pointer;
         text-align: center;
@@ -98,5 +99,11 @@ page-home {
       }
     }
   }
+}
+
+@media only screen and (max-width: 380px) {
+    .radio_inp{
+      margin-left: -10%;
+    }
 }
 }
